welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:19: error: not found: value colonne
    colonne = colonne+1
    ^